--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -353,6 +353,10 @@
                                     <outlet property="delegate" destination="san-Ex-BD7" id="JBB-CZ-rqo"/>
                                 </connections>
                             </tableView>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWp-PJ-6p1">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="129"/>
+                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="31H-Lm-9B9">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="129"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="3Ud-d7-EB3">
@@ -401,9 +405,9 @@
                                             <action selector="creditsAction:" destination="san-Ex-BD7" eventType="touchUpInside" id="VA5-lo-VVy"/>
                                         </connections>
                                     </button>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tMC-o4-64I">
-                                        <rect key="frame" x="0.0" y="49" width="375" height="52"/>
-                                        <color key="backgroundColor" red="0.35686274509999999" green="0.58431372550000005" blue="0.97647058819999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tMC-o4-64I">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="35"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="1i1-Wc-Mnc"/>
                                         </constraints>
@@ -411,24 +415,36 @@
                                             <size key="itemSize" width="88" height="35"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryCollectionCell" id="6ON-gL-Jvl" customClass="CategoryCollectionCell" customModule="News" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="-1" width="88" height="54"/>
+                                                <rect key="frame" x="10" y="0.0" width="88" height="35"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="88" height="54"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="88" height="35"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP3-cR-Csf">
-                                                            <rect key="frame" x="5" y="16.666666666666668" width="78" height="21.000000000000004"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="APi-Wm-Mmm">
+                                                            <rect key="frame" x="0.0" y="0.0" width="88" height="35"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP3-cR-Csf">
+                                                                    <rect key="frame" x="5" y="7" width="78" height="21"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstItem="JP3-cR-Csf" firstAttribute="top" secondItem="APi-Wm-Mmm" secondAttribute="top" constant="7" id="29M-Zn-J3e"/>
+                                                                <constraint firstAttribute="bottom" secondItem="JP3-cR-Csf" secondAttribute="bottom" constant="7" id="Dnu-1w-8VN"/>
+                                                                <constraint firstAttribute="height" constant="35" id="LsG-Xb-Ea1"/>
+                                                                <constraint firstAttribute="trailing" secondItem="JP3-cR-Csf" secondAttribute="trailing" constant="5" id="TSH-2I-ljw"/>
+                                                                <constraint firstItem="JP3-cR-Csf" firstAttribute="leading" secondItem="APi-Wm-Mmm" secondAttribute="leading" constant="5" id="lA7-Wb-d84"/>
+                                                            </constraints>
+                                                        </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y17-kd-d2i">
-                                                            <rect key="frame" x="0.0" y="51" width="88" height="2"/>
+                                                            <rect key="frame" x="0.0" y="31" width="88" height="2"/>
                                                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="2" id="R31-ap-eiU"/>
@@ -441,15 +457,19 @@
                                                         </view>
                                                     </subviews>
                                                 </view>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="JP3-cR-Csf" secondAttribute="trailing" constant="5" id="3ac-zf-f2Y"/>
-                                                    <constraint firstItem="JP3-cR-Csf" firstAttribute="leading" secondItem="6ON-gL-Jvl" secondAttribute="leading" constant="5" id="5rY-Yr-4Uh"/>
+                                                    <constraint firstAttribute="bottom" secondItem="APi-Wm-Mmm" secondAttribute="bottom" id="9ch-Il-3Sp"/>
+                                                    <constraint firstItem="APi-Wm-Mmm" firstAttribute="top" secondItem="6ON-gL-Jvl" secondAttribute="top" id="EIY-8Y-hLW"/>
+                                                    <constraint firstAttribute="trailing" secondItem="APi-Wm-Mmm" secondAttribute="trailing" id="Vps-JJ-Pi8"/>
+                                                    <constraint firstItem="APi-Wm-Mmm" firstAttribute="leading" secondItem="6ON-gL-Jvl" secondAttribute="leading" id="X1v-cO-lYL"/>
                                                     <constraint firstItem="y17-kd-d2i" firstAttribute="leading" secondItem="6ON-gL-Jvl" secondAttribute="leading" id="XjZ-Ph-Obs"/>
                                                     <constraint firstAttribute="trailing" secondItem="y17-kd-d2i" secondAttribute="trailing" id="eYQ-Hl-QQ7"/>
-                                                    <constraint firstItem="JP3-cR-Csf" firstAttribute="centerY" secondItem="6ON-gL-Jvl" secondAttribute="centerY" id="pDD-rz-dAw"/>
                                                     <constraint firstAttribute="bottom" secondItem="y17-kd-d2i" secondAttribute="bottom" constant="2" id="vYH-Hb-BSQ"/>
                                                 </constraints>
                                                 <connections>
+                                                    <outlet property="cellContainerView" destination="APi-Wm-Mmm" id="tAd-49-STO"/>
+                                                    <outlet property="cellContainerViewHeightConst" destination="LsG-Xb-Ea1" id="tAf-Zf-1kw"/>
                                                     <outlet property="chosenIndicatorView" destination="y17-kd-d2i" id="b3k-Qj-sbi"/>
                                                     <outlet property="nameLabel" destination="JP3-cR-Csf" id="wbO-Gl-3Ag"/>
                                                 </connections>
@@ -486,16 +506,20 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="31H-Lm-9B9" firstAttribute="bottom" secondItem="zpP-qi-5CD" secondAttribute="bottom" id="2jj-f1-ElB"/>
+                            <constraint firstItem="aWp-PJ-6p1" firstAttribute="trailing" secondItem="31H-Lm-9B9" secondAttribute="trailing" id="5wc-h3-euU"/>
                             <constraint firstItem="31H-Lm-9B9" firstAttribute="trailing" secondItem="gjy-kg-sAd" secondAttribute="trailing" id="FAW-QV-aLp"/>
                             <constraint firstItem="zpP-qi-5CD" firstAttribute="leading" secondItem="gjy-kg-sAd" secondAttribute="leading" id="bkY-KC-14Q"/>
                             <constraint firstItem="gjy-kg-sAd" firstAttribute="trailing" secondItem="zpP-qi-5CD" secondAttribute="trailing" id="csP-Pe-2o8"/>
                             <constraint firstItem="Xl8-5I-U9F" firstAttribute="leading" secondItem="gjy-kg-sAd" secondAttribute="leading" id="ec6-cd-UE2"/>
                             <constraint firstItem="zpP-qi-5CD" firstAttribute="top" secondItem="gjy-kg-sAd" secondAttribute="top" id="jVd-Op-1PK"/>
                             <constraint firstItem="Xl8-5I-U9F" firstAttribute="top" secondItem="O8h-mL-u3y" secondAttribute="top" id="jsF-gz-m02"/>
+                            <constraint firstItem="aWp-PJ-6p1" firstAttribute="leading" secondItem="31H-Lm-9B9" secondAttribute="leading" id="kVK-wh-t2T"/>
                             <constraint firstItem="31H-Lm-9B9" firstAttribute="leading" secondItem="gjy-kg-sAd" secondAttribute="leading" id="l0y-Wa-j4Q"/>
                             <constraint firstItem="Xl8-5I-U9F" firstAttribute="trailing" secondItem="gjy-kg-sAd" secondAttribute="trailing" id="qcW-bF-A3h"/>
                             <constraint firstItem="31H-Lm-9B9" firstAttribute="top" secondItem="O8h-mL-u3y" secondAttribute="top" id="u1c-D0-0h0"/>
                             <constraint firstAttribute="bottom" secondItem="Xl8-5I-U9F" secondAttribute="bottom" id="vol-Gy-MJj"/>
+                            <constraint firstItem="aWp-PJ-6p1" firstAttribute="bottom" secondItem="31H-Lm-9B9" secondAttribute="bottom" id="yQS-RA-vez"/>
+                            <constraint firstItem="aWp-PJ-6p1" firstAttribute="top" secondItem="31H-Lm-9B9" secondAttribute="top" id="ydi-ns-Zkk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="gjy-kg-sAd"/>
                         <connections>
@@ -505,6 +529,7 @@
                     <navigationItem key="navigationItem" id="wEX-Zs-QnU"/>
                     <connections>
                         <outlet property="categoryCollectionView" destination="tMC-o4-64I" id="9M8-fn-Ytb"/>
+                        <outlet property="navigationBarBlurColorView" destination="aWp-PJ-6p1" id="ySB-TG-Wr9"/>
                         <outlet property="navigationBarView" destination="zpP-qi-5CD" id="XSv-FR-E2E"/>
                         <outlet property="navigationBlurView" destination="31H-Lm-9B9" id="kJQ-hB-IXW"/>
                         <outlet property="navigationCreditsButton" destination="bR2-RK-ClQ" id="29e-M9-2tq"/>
