tmp work in progress, stupid images

--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -816,8 +816,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YwF-ti-seh">
                                         <rect key="frame" x="0.0" y="262" width="375" height="600"/>
                                         <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2yZ-aW-6T8">
-                                                <rect key="frame" x="30" y="136" width="315" height="432"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yZ-aW-6T8">
+                                                <rect key="frame" x="30" y="135" width="315" height="432"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel leo sodales sem rutrum ullamcorper. Integer ut laoreet massa. Integer nec rhoncus leo.
 
@@ -832,13 +832,24 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel leo sodales sem
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
+                                            <wkWebView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iUe-S6-IvQ">
+                                                <rect key="frame" x="30" y="135" width="315" height="432"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <wkWebViewConfiguration key="configuration">
+                                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" audio="YES" video="YES"/>
+                                                    <wkPreferences key="preferences" minimumFontSize="14"/>
+                                                </wkWebViewConfiguration>
+                                            </wkWebView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="iUe-S6-IvQ" firstAttribute="leading" secondItem="YwF-ti-seh" secondAttribute="leading" constant="15" id="5BQ-az-4Ad"/>
                                             <constraint firstAttribute="bottom" secondItem="2yZ-aW-6T8" secondAttribute="bottom" constant="32" id="5Xz-Fp-9rt"/>
+                                            <constraint firstAttribute="bottom" secondItem="iUe-S6-IvQ" secondAttribute="bottom" constant="30" id="R7d-IC-hnq"/>
                                             <constraint firstAttribute="height" constant="600" id="Rf8-Th-CIF"/>
                                             <constraint firstAttribute="trailing" secondItem="2yZ-aW-6T8" secondAttribute="trailing" constant="30" id="SHX-IK-s0v"/>
                                             <constraint firstItem="2yZ-aW-6T8" firstAttribute="leading" secondItem="YwF-ti-seh" secondAttribute="leading" constant="30" id="j9s-hQ-6o9"/>
+                                            <constraint firstAttribute="trailing" secondItem="iUe-S6-IvQ" secondAttribute="trailing" constant="15" id="vzN-wZ-McB"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6lH-4h-6FB">
@@ -905,6 +916,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel leo sodales sem
                                     <constraint firstItem="6lH-4h-6FB" firstAttribute="leading" secondItem="YwF-ti-seh" secondAttribute="leading" constant="15" id="agW-TO-iN0"/>
                                     <constraint firstItem="YwF-ti-seh" firstAttribute="top" secondItem="c4p-0Y-WSw" secondAttribute="bottom" id="hke-QK-FyU"/>
                                     <constraint firstAttribute="bottom" secondItem="YwF-ti-seh" secondAttribute="bottom" id="hkx-hz-SBb"/>
+                                    <constraint firstItem="iUe-S6-IvQ" firstAttribute="top" secondItem="6lH-4h-6FB" secondAttribute="bottom" constant="30" id="kAZ-Tj-mU3"/>
                                     <constraint firstItem="2yZ-aW-6T8" firstAttribute="top" secondItem="6lH-4h-6FB" secondAttribute="bottom" constant="30" id="nwo-vS-5dR"/>
                                     <constraint firstItem="6lH-4h-6FB" firstAttribute="trailing" secondItem="YwF-ti-seh" secondAttribute="trailing" constant="-15" id="rzk-i2-ZRo"/>
                                     <constraint firstItem="gmR-cJ-RZi" firstAttribute="leading" secondItem="c4p-0Y-WSw" secondAttribute="leading" id="s7v-Ec-UkT"/>
@@ -982,14 +994,16 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel leo sodales sem
                         <outlet property="locationLabel" destination="nlt-if-P5j" id="mI4-L5-LHy"/>
                         <outlet property="saveButton" destination="HFy-qp-WnO" id="ltx-fG-nqH"/>
                         <outlet property="textContainerView" destination="YwF-ti-seh" id="HNh-xY-peX"/>
+                        <outlet property="textContainerViewHeightConst" destination="Rf8-Th-CIF" id="Eyn-QY-mtQ"/>
                         <outlet property="textTextView" destination="2yZ-aW-6T8" id="6dX-qa-cPe"/>
+                        <outlet property="textWebView" destination="iUe-S6-IvQ" id="rZt-us-Lpz"/>
                         <outlet property="titleContainerView" destination="6lH-4h-6FB" id="COt-Sl-bZj"/>
                         <outlet property="titleLabel" destination="66s-ag-6cS" id="iWX-w6-jXM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pjf-Rd-cGa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-222" y="1651"/>
+            <point key="canvasLocation" x="-223.19999999999999" y="1650.7389162561576"/>
         </scene>
         <!--Static PageVC-->
         <scene sceneID="YHF-YA-4c9">
